[gd_scene load_steps=4 format=2]

[ext_resource path="res://Speedrun_Clock.gd" type="Script" id=1]
[ext_resource path="res://assets/Game menu Fonts/expressway rg.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 26
font_data = ExtResource( 2 )

[node name="Speedrun_Clock" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 18.0
margin_top = 17.0
margin_right = 112.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 1 )
text = "Time %s"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
visible = false
margin_left = 18.0
margin_top = 47.0
margin_right = 112.0
margin_bottom = 79.0
custom_fonts/font = SubResource( 1 )
text = "Time %s"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
visible = false
margin_left = 18.0
margin_top = 77.0
margin_right = 112.0
margin_bottom = 109.0
custom_fonts/font = SubResource( 1 )
text = "Time %s"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="."]
visible = false
margin_left = 18.0
margin_top = 107.0
margin_right = 112.0
margin_bottom = 139.0
custom_fonts/font = SubResource( 1 )
text = "Time %s"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="."]
visible = false
margin_left = 18.0
margin_top = 137.0
margin_right = 112.0
margin_bottom = 169.0
custom_fonts/font = SubResource( 1 )
text = "Time %s"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label6" type="Label" parent="."]
visible = false
margin_left = 18.0
margin_top = 167.0
margin_right = 112.0
margin_bottom = 199.0
custom_fonts/font = SubResource( 1 )
text = "Time %s"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label7" type="Label" parent="."]
visible = false
margin_left = 18.0
margin_top = 197.0
margin_right = 112.0
margin_bottom = 229.0
custom_fonts/font = SubResource( 1 )
text = "Time %s"
__meta__ = {
"_edit_use_anchors_": false
}
